<resources>
    <!-- Global -->
    <string name="app_name">AgendaOdonto</string>

    <string name="label_name">Nome</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="label_dob">Data de Nascimento</string>
    <string name="label_register">Cadastro</string>
    <string name="label_phone">Número de Celular</string>

    <!-- butoes -->
    <string name="btn_register">Cadastrar</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_login_google">Entre com Google</string>
    <string name="btn_save_changes">Salvar Modificações</string>
    <string name="btn_edit">Editar</string>

    <!-- page names -->
    <string name="entrar">Entrar</string>
    <string name="home">Início</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="agendamento">Agendamento</string>
    <string name="historico">Histórico</string>
    <string name="link_register">Não possui cadastro? Crie sua conta.</string>
    <string name="settings">Preferências</string>

    <!-- home page -->
    <string name="home_btn_agendar">Agendar</string>
    <string name="home_btn_historico">Minhas Consultas</string>

    <!-- nav menu -->
    <string name="nav_inicio">Início</string>
    <string name="nav_dados_pessoais">Dados Pessoais</string>
    <string name="nav_settings">Preferências</string>
    <string name="nav_logout">Sair da Conta</string>
    <string name="label_agendamento">Agendamento</string>

    <!-- dados usuario -->
    <string name="user_name">Fulano de Tal</string>
    <string name="user_email">fulano@agendaodonto.com</string>
    <string name="user_phone">(85)99991–5355</string>
    <string name="user_dob">01/01/1994</string>
    <string name="user_type">Paciente</string>

    <!-- content description -->
    <string name="cd_edit_ic">Editar</string>

    <!--Errors -->
    <string name="error_name">Nome inválido. Por favor, insira outro.</string>
    <string name="error_password_mismatch"></string>

    <!-- Preferencias -->
    <string name="settings_notification">Notificações</string>

    <string name="rating">Nota media: </string>
    <string name="label_usa_aparelho">Usa aparelho?</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Nao</string>
    <string name="label_frequencia_escova_dentes">Com que frequencia voce escova os dentes?</string>
    <string name="label_motivo_consulta">Abaixo, descreva os seus sintomas ou motivos da consulta:</string>
    <string name="bnt_confirmar_agendamento">Confirmar Agendamento</string>
    <string name="label_alergia">Possui alergias? Se sim, nos diga quais:</string>
    <string name="label_fumante">Fuma?</string>

    <!-- content description -->

    <string name="cd_btn_delete_notification">Excluir notificacao</string>
    <string name="tab_consultas_historico_sem_pacientes">Você ainda não possui pacientes.</string>
    <string name="btn_form_consulta_dentista">Enviar</string>
    <string name="label_consulta_obs">Observações</string>
    <string name="label_arquivos_upload">Enviar arquivos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_forgot_password">Esqueci minha senha</string>
    <string name="lista_dentistas_fragment_pt">Escolha o profissional para fazer o agendamento</string>
    <string name="login_dentista">Área do Dentista</string>
    <string name="agendamento_lista_dentistas_titulo">Para continuar, selecione o dentista</string>

    <string name="calendario_subtitle">Selecione data e horario</string>
    <string name="btn_calendario">Continuar</string>


</resources>
