<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Logo of the app -->
    <TextView
        android:id="@+id/tv_label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/label_register"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Name input field -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/et_border"
        android:hint="@string/label_name"
        android:textColorHint="@color/grey_lt"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black" />

    <!-- Email input field -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/et_border"
        android:hint="@string/label_email"
        android:textColorHint="@color/grey_lt"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black" />

    <!-- Date of birth input field -->
    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/et_border"
        android:hint="@string/label_dob"
        android:textColorHint="@color/grey_lt"
        android:inputType="date"
        android:padding="12dp"
        android:textColor="@color/black" />

    <!-- Password input field -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/et_border"
        android:hint="@string/label_password"
        android:textColorHint="@color/grey_lt"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black" />

    <!-- Register button -->
    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_background"
        android:padding="12dp"
        android:text="@string/btn_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

</LinearLayout>